# PRIME-ros

./: CMakeLists.txt  README.md  package.xml  protocol.txt  requirements.txt
action/: PRIMEAction.action
config/: llm_prompts.yaml  prime_params.yaml  workspace_homography.yaml
launch/: apriltag_test.launch  prime.launch  prime_full.launch  prime_full_option_a.launch
logs/: prime_logger.py
msg/: CandidateSet.msg  ControlMode.msg  JoystickState.msg  ObjectState.msg  PRIMEQuery.msg  PRIMEResponse.msg  SymbolicState.msg  ToolCall.msg  ToolResult.msg
scripts/: apply_safety_boundary.py  calibrate_workspace_homography.py  go_home.py  gui_teleop.py  joystick_monitor.py  llm_executive.py  oracle_assist.py  prime_memory.py  prime_node.py  print_home_state.py  safety_monitor.py  state_builder.py  tool_executor.py  user_interface.py
srv/: ExecuteTool.srv  GetSymbolicState.srv
test/: test_teleop_command_model.py
